# location_info_collection

./: README.md  example_output.csv  sent_from_smartphone.json
location-info-collection/: .gitignore  Makefile  handler.py  package-lock.json  package.json  pyproject.toml  serverless.yml
