[tool.poetry]
name = "location-info-collection"
version = "0.1.0"
description = ""
authors = ["yoshiyasugimoto"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.18.40"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
